--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -21,15 +21,13 @@ jobs:
       - name: Install dependencies
         run: pip install -r requirements.txt
 
-      # ✅ Step 1: Login to Azure using publish profile
       - name: Login to Azure
         uses: azure/login@v1
         with:
           creds: ${{ secrets.AZURE_WEBAPP_PUBLISH_PROFILE }}
 
-      # ✅ Step 2: Deploy to Azure Web App
       - name: Deploy to Azure Web App
         uses: azure/webapps-deploy@v2
         with:
-          app-name: flask-devops-app  # <-- your Azure App name
+          app-name: flask-devops-app  # <-- your Azure Web App name
           package: .
