--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -21,7 +21,7 @@ jobs:
       - name: Install dependencies
         run: pip install -r requirements.txt
 
-      - name: Login to Azure
+      - name: Login to Azure with Publish Profile
         uses: azure/login@v1
         with:
           creds: ${{ secrets.AZURE_WEBAPP_PUBLISH_PROFILE }}
@@ -29,5 +29,5 @@ jobs:
       - name: Deploy to Azure Web App
         uses: azure/webapps-deploy@v2
         with:
-          app-name: flask-devops-app  # <-- your Azure Web App name
+          app-name: flask-devops-app  # your Azure Web App name
           package: .
